--- a/templates/actor/tab/bio.html
+++ b/templates/actor/tab/bio.html
@@ -2,8 +2,8 @@
     <div class="title-line">
         <h1><div class="column-title">{{localize "cleenmain.label.bio"}}</div></h1>
         {{#if unlocked}}
-        <a class="item-create right-icon" data-type="biodata" title="{{localize "cleenmain.biodata.add"}}">
-                <i class="fas fa-plus"></i>
+    <a class="item-create right-icon" data-type="biodata" title="{{localize "cleenmain.biodata.add"}}">
+    <h1><i class="fas fa-plus"></i></h1>
         </a>
         {{/if}}
     </div>
