--- a/less/tab/player-bio.less
+++ b/less/tab/player-bio.less
@@ -2,6 +2,9 @@
     display: flex;
     flex-direction: column;
     padding: 0 0 2em 0;
+    .line-label{
+        color: @title-color;
+    }
     .title-line{
         display: flex;
         flex-direction: row;
