--- a/templates/actor/tab/bio.html
+++ b/templates/actor/tab/bio.html
@@ -1,6 +1,6 @@
 <div class="tab-bio">
     <div class="title-line">
-        <h1><div class="column-title">{{localize "cleenmain.label.bio"}}</div></h1>
+        <h1><div class="column-title">{{localize "CLEENMAIN.label.bio"}}</div></h1>
     </div>
     {{#if unlocked}}
     <div class="description-block">
