--- a/templates/actor/tab/bio.html
+++ b/templates/actor/tab/bio.html
@@ -7,6 +7,14 @@
       <h2 class="column-title">{{localize "CLEENMAIN.label.description"}}</h2>
       {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
     </div>
+    <div class="description-block">
+      <h2 class="column-title">{{localize "CLEENMAIN.label.equipment"}}</h2>
+      {{editor content=data.equipment target="data.equipment" button=true owner=owner editable=editable}}
+    </div>
+    <div class="description-block">
+      <h2 class="column-title">{{localize "CLEENMAIN.label.tactic"}}</h2>
+      {{editor content=data.tactic target="data.tactic" button=true owner=owner editable=editable}}
+    </div>        
     <div class="traits-block">
       <h2 class="column-title">{{localize "CLEENMAIN.label.traits"}}</h2>
       {{editor content=data.traits target="data.traits" button=true owner=owner editable=editable}}
@@ -16,6 +24,14 @@
       <h2 class="column-title">{{localize "CLEENMAIN.label.description"}}</h2>
       {{{data.description}}}
     </div>
+    <div class="description-block">
+      <h2 class="column-title">{{localize "CLEENMAIN.label.equipment"}}</h2>
+      {{{data.equipment}}}
+    </div>
+    <div class="description-block">
+      <h2 class="column-title">{{localize "CLEENMAIN.label.tactic"}}</h2>
+      {{{data.tactic}}}
+    </div>        
     <div class="traits-block">
       <h2 class="column-title">{{localize "CLEENMAIN.label.traits"}}</h2>
       {{{data.traits}}}
