--- a/less/tab/player-bio.less
+++ b/less/tab/player-bio.less
@@ -13,7 +13,11 @@
         .item-create{
             margin-left: auto;
         }
-    }   
+    }
+    .description-block{
+        font-family: @long-text-font;
+        font-size: @long-text-font-size;
+    }
     .editor{
         min-height: @editor-height;
         .editor-content{
