--- a/less/tab/player-bio.less
+++ b/less/tab/player-bio.less
@@ -18,6 +18,10 @@
         font-family: @long-text-font;
         font-size: @long-text-font-size;
     }
+    .traits-block{
+        font-family: @long-text-font;
+        font-size: @long-text-font-size;
+    }
     .editor{
         min-height: @editor-height;
         .editor-content{
