--- a/less/tab/player-bio.less
+++ b/less/tab/player-bio.less
@@ -17,6 +17,8 @@
     .description-block{
         font-family: @long-text-font;
         font-size: @long-text-font-size;
+        padding-left: 0.5em;
+        padding-right: 0.5em;
     }
     .traits-block{
         font-family: @long-text-font;
