--- a/less/tab/player-bio.less
+++ b/less/tab/player-bio.less
@@ -23,6 +23,8 @@
     .traits-block{
         font-family: @long-text-font;
         font-size: @long-text-font-size;
+        padding-left: 0.5em;
+        padding-right: 0.5em;
     }
     .editor{
         min-height: @editor-height;
