--- a/templates/actor/tab/bio.html
+++ b/templates/actor/tab/bio.html
@@ -1,8 +1,6 @@
 <div class="tab-bio">
   {{#ifn isNpc}}
-    <div class="title-line">
-      <h1 class="column-title">{{localize "CLEENMAIN.label.bio"}}</h1>
-    </div>
+  <p>&nbsp;</p>
     {{/ifn}}
   {{#if unlocked}}
     <div class="description-block">
