--- a/less/tab/player-bio.less
+++ b/less/tab/player-bio.less
@@ -14,15 +14,16 @@
             margin-left: auto;
         }
     }
+    .bioelement-title{
+        font: @bio-title-font;
+        border-bottom: @bio-border;
+    }
     .description-block{
-        font-family: @long-text-font;
-        font-size: @long-text-font-size;
-        padding-left: 0.5em;
-        padding-right: 0.5em;
+        font: @long-text-font;
+        padding: 0.5em;
     }
     .traits-block{
-        font-family: @long-text-font;
-        font-size: @long-text-font-size;
+        font: @long-text-font;
         padding-left: 0.5em;
         padding-right: 0.5em;
     }
