--- a/templates/actor/tab/bio.html
+++ b/templates/actor/tab/bio.html
@@ -4,46 +4,46 @@
     {{/ifn}}
   {{#if unlocked}}
     <div class="description-block">
-      <h2 class="column-title">{{localize "CLEENMAIN.label.description"}}</h2>
+      <div class="bioelement-title">{{localize "CLEENMAIN.label.description"}}</div>
       {{editor descriptionhtml target="system.description" button=true owner=owner editable=editable}}
     </div>
     {{#if isNpc}}
       <div class="description-block">
-        <h2 class="column-title">{{localize "CLEENMAIN.label.equipment"}}</h2>
+        <div class="bioelement-title">{{localize "CLEENMAIN.label.equipment"}}</div>
         {{editor equipmenthtml target="system.equipment" button=true owner=owner editable=editable}}
       </div>
       <div class="description-block">
-        <h2 class="column-title">{{localize "CLEENMAIN.label.tactic"}}</h2>
+        <div class="bioelement-title">{{localize "CLEENMAIN.label.tactic"}}</div>
         {{editor actorSystem.tactic target="system.tactic" button=true owner=owner editable=editable}}
       </div>        
       <div class="traits-block">
-        <h2 class="column-title">{{localize "CLEENMAIN.label.traits"}}</h2>
+        <div class="bioelement-title">{{localize "CLEENMAIN.label.traits"}}</div>
         {{editor actorSystem.traits target="system.traits" button=true owner=owner editable=editable}}
       </div>
     {{/if}}
   {{else}}
     {{#if (isNotEmptyString actorSystem.description)}}
     <div class="description-block">
-      <h2 class="column-title">{{localize "CLEENMAIN.label.description"}}</h2>
+      <div class="bioelement-title">{{localize "CLEENMAIN.label.description"}}</div>
       {{{descriptionhtml}}}
     </div>
     {{/if}}
     {{#if isNpc}}
       {{#if (isNotEmptyString actorSystem.equipment)}}
       <div class="description-block">
-        <h2 class="column-title">{{localize "CLEENMAIN.label.equipment"}}</h2>
+        <div class="bioelement-title">{{localize "CLEENMAIN.label.equipment"}}</div>
         {{{equipmenthtml}}}
       </div>
       {{/if}}
       {{#if (isNotEmptyString actorSystem.tactic)}}
       <div class="description-block">
-        <h2 class="column-title">{{localize "CLEENMAIN.label.tactic"}}</h2>
+        <div class="bioelement-title">{{localize "CLEENMAIN.label.tactic"}}</div>
         {{{actorSystem.tactic}}}
       </div>  
       {{/if}}
       {{#if (isNotEmptyString actorSystem.traits)}}
       <div class="traits-block">
-        <h2 class="column-title">{{localize "CLEENMAIN.label.traits"}}</h2>
+        <div class="bioelement-title">{{localize "CLEENMAIN.label.traits"}}</div>
         {{{actorSystem.traits}}}
       </div>
       {{/if}}
